//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Server {
  id String [pk]
  discordId String [unique, not null]
  categoryName String [not null, default: 'contests']
  categoryId String [unique]
  contests Contest [not null]
  users ServerUsers [not null]
}

Table Contest {
  id String [pk]
  name String [not null]
  description String
  isOpen Boolean [not null, default: true]
  picturesOnly Boolean [not null, default: false]
  maxSubmissions Int [not null, default: 1]
  participants ContestParticipants [not null]
  submissions Submission [not null]
  createdAt DateTime [default: `now()`, not null]
  server Server [not null]
  serverId String [not null]
}

Table Submission {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  author User [not null]
  authorId String [not null]
  contest Contest [not null]
  contestId String [not null]
  caption String
}

Table User {
  id String [pk]
  discordId String [unique, not null]
  discordTag String [unique, not null]
  twitchName String
  twitchDisplayName String [unique]
  contests ContestParticipants [not null]
  servers ServerUsers [not null]
  submissions Submission [not null]
  profileUrl String [not null]
}

Table ContestParticipants {
  user User [not null]
  userId String [not null]
  contest Contest [not null]
  contestId String [not null]

  indexes {
    (userId, contestId) [pk]
  }
}

Table ServerUsers {
  user User [not null]
  userId String [not null]
  server Server [not null]
  serverId String [not null]

  indexes {
    (userId, serverId) [pk]
  }
}

Ref: Contest.serverId > Server.id

Ref: Submission.authorId > User.id

Ref: Submission.contestId > Contest.id

Ref: ContestParticipants.userId > User.id

Ref: ContestParticipants.contestId > Contest.id

Ref: ServerUsers.userId > User.id

Ref: ServerUsers.serverId > Server.id